--- a/styles/website.css
+++ b/styles/website.css
@@ -17,3 +17,7 @@ cite{
     background-color: #e7e7e7;
     border: none;
 }
+
+table code, .markdown-section table code {
+	background-color: transparent !important;
+}
